crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D215_sections.py.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
---
./resources/test/fixtures/pydocstyle/sections.py:156:5: D215 [*] Section underline is over-indented ("Returns")
    |
156 |   @expect("D215: Section underline is over-indented (in section 'Returns')")
157 |   def section_underline_overindented():  # noqa: D416
158 |       """Toggle the gizmo.
    |  _____^
159 | | 
160 | |     Returns
161 | |         -------
162 | |     A value of some sort.
163 | | 
164 | |     """
    | |_______^ D215
    |
    = help: Remove over-indentation from "Returns" underline

ℹ Suggested fix
156 156 |     """Toggle the gizmo.
157 157 | 
158 158 |     Returns
159     |-        -------
    159 |+    ------
160 160 |     A value of some sort.
161 161 | 
162 162 |     """

./resources/test/fixtures/pydocstyle/sections.py:170:5: D215 [*] Section underline is over-indented ("Returns")
    |
170 |   @expect("D414: Section has no content ('Returns')")
171 |   def section_underline_overindented_and_contentless():  # noqa: D416
172 |       """Toggle the gizmo.
    |  _____^
173 | | 
174 | |     Returns
175 | |         -------
176 | |     """
    | |_______^ D215
    |
    = help: Remove over-indentation from "Returns" underline

ℹ Suggested fix
170 170 |     """Toggle the gizmo.
171 171 | 
172 172 |     Returns
173     |-        -------
    173 |+    ------
174 174 |     """
175 175 | 
176 176 | 


