crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D300_D.py.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
---
D.py:307:5: D300 Use triple double quotes `"""`
    |
305 | @expect('D300: Use """triple double quotes""" (found \'\'\'-quotes)')
306 | def triple_single_quotes_raw():
307 |     r'''Summary.'''
    |     ^^^^^^^^^^^^^^^ D300
    |

D.py:312:5: D300 Use triple double quotes `"""`
    |
310 | @expect('D300: Use """triple double quotes""" (found \'\'\'-quotes)')
311 | def triple_single_quotes_raw_uppercase():
312 |     R'''Summary.'''
    |     ^^^^^^^^^^^^^^^ D300
    |

D.py:317:5: D300 Use triple double quotes `"""`
    |
315 | @expect('D300: Use """triple double quotes""" (found \'-quotes)')
316 | def single_quotes_raw():
317 |     r'Summary.'
    |     ^^^^^^^^^^^ D300
    |

D.py:322:5: D300 Use triple double quotes `"""`
    |
320 | @expect('D300: Use """triple double quotes""" (found \'-quotes)')
321 | def single_quotes_raw_uppercase():
322 |     R'Summary.'
    |     ^^^^^^^^^^^ D300
    |

D.py:328:5: D300 Use triple double quotes `"""`
    |
326 | @expect('D301: Use r""" if any backslashes in a docstring')
327 | def single_quotes_raw_uppercase_backslash():
328 |     R'Sum\mary.'
    |     ^^^^^^^^^^^^ D300
    |

D.py:645:5: D300 Use triple double quotes `"""`
    |
644 |   def single_line_docstring_with_an_escaped_backslash():
645 |       "\
    |  _____^
646 | |     "
    | |_____^ D300
    |


