crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D301_D.py.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
---
./resources/test/fixtures/pydocstyle/D.py:328:5: D301 Use `r"""` if any backslashes in a docstring
    |
328 | @expect('D301: Use r""" if any backslashes in a docstring')
329 | def single_quotes_raw_uppercase_backslash():
330 |     R'Sum\mary.'
    |     ^^^^^^^^^^^^ D301
    |

./resources/test/fixtures/pydocstyle/D.py:333:5: D301 Use `r"""` if any backslashes in a docstring
    |
333 | @expect('D301: Use r""" if any backslashes in a docstring')
334 | def double_quotes_backslash():
335 |     """Sum\\mary."""
    |     ^^^^^^^^^^^^^^^^ D301
    |

./resources/test/fixtures/pydocstyle/D.py:338:5: D301 Use `r"""` if any backslashes in a docstring
    |
338 | @expect('D301: Use r""" if any backslashes in a docstring')
339 | def double_quotes_backslash_uppercase():
340 |     R"""Sum\\mary."""
    |     ^^^^^^^^^^^^^^^^^ D301
    |


