crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D301_D301.py.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
---
D301.py:2:5: D301 Use `r"""` if any backslashes in a docstring
  |
1 | def double_quotes_backslash():
2 |     """Sum\\mary."""
  |     ^^^^^^^^^^^^^^^^ D301
  |

D301.py:10:5: D301 Use `r"""` if any backslashes in a docstring
   |
 9 | def double_quotes_backslash_uppercase():
10 |     R"""Sum\\mary."""
   |     ^^^^^^^^^^^^^^^^^ D301
   |


