crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D400_D400.py.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
expression: diagnostics
---
- kind:
    name: EndsInPeriod
    body: First line should end with a period
    suggestion: Add period
    fixable: true
  location:
    row: 2
    column: 4
  end_location:
    row: 2
    column: 36
  fix:
    edits:
      - location:
          row: 2
          column: 35
        end_location:
          row: 2
          column: 35
        content: "."
  parent: ~
- kind:
    name: EndsInPeriod
    body: First line should end with a period
    suggestion: Add period
    fixable: true
  location:
    row: 7
    column: 4
  end_location:
    row: 7
    column: 40
  fix:
    edits:
      - location:
          row: 7
          column: 37
        end_location:
          row: 7
          column: 37
        content: "."
  parent: ~
- kind:
    name: EndsInPeriod
    body: First line should end with a period
    suggestion: Add period
    fixable: true
  location:
    row: 12
    column: 4
  end_location:
    row: 15
    column: 7
  fix:
    edits:
      - location:
          row: 14
          column: 28
        end_location:
          row: 14
          column: 28
        content: "."
  parent: ~
- kind:
    name: EndsInPeriod
    body: First line should end with a period
    suggestion: Add period
    fixable: true
  location:
    row: 20
    column: 4
  end_location:
    row: 20
    column: 40
  fix:
    edits:
      - location:
          row: 20
          column: 37
        end_location:
          row: 20
          column: 37
        content: "."
  parent: ~
- kind:
    name: EndsInPeriod
    body: First line should end with a period
    suggestion: Add period
    fixable: true
  location:
    row: 25
    column: 4
  end_location:
    row: 27
    column: 31
  fix:
    edits:
      - location:
          row: 27
          column: 28
        end_location:
          row: 27
          column: 28
        content: "."
  parent: ~
- kind:
    name: EndsInPeriod
    body: First line should end with a period
    suggestion: Add period
    fixable: true
  location:
    row: 32
    column: 4
  end_location:
    row: 34
    column: 52
  fix:
    edits:
      - location:
          row: 34
          column: 48
        end_location:
          row: 34
          column: 48
        content: "."
  parent: ~
- kind:
    name: EndsInPeriod
    body: First line should end with a period
    suggestion: Add period
    fixable: true
  location:
    row: 39
    column: 4
  end_location:
    row: 39
    column: 37
  fix:
    edits:
      - location:
          row: 39
          column: 36
        end_location:
          row: 39
          column: 36
        content: "."
  parent: ~
- kind:
    name: EndsInPeriod
    body: First line should end with a period
    suggestion: Add period
    fixable: true
  location:
    row: 44
    column: 4
  end_location:
    row: 44
    column: 41
  fix:
    edits:
      - location:
          row: 44
          column: 38
        end_location:
          row: 44
          column: 38
        content: "."
  parent: ~
- kind:
    name: EndsInPeriod
    body: First line should end with a period
    suggestion: Add period
    fixable: true
  location:
    row: 49
    column: 4
  end_location:
    row: 52
    column: 7
  fix:
    edits:
      - location:
          row: 51
          column: 28
        end_location:
          row: 51
          column: 28
        content: "."
  parent: ~
- kind:
    name: EndsInPeriod
    body: First line should end with a period
    suggestion: Add period
    fixable: true
  location:
    row: 57
    column: 4
  end_location:
    row: 57
    column: 41
  fix:
    edits:
      - location:
          row: 57
          column: 38
        end_location:
          row: 57
          column: 38
        content: "."
  parent: ~
- kind:
    name: EndsInPeriod
    body: First line should end with a period
    suggestion: Add period
    fixable: true
  location:
    row: 62
    column: 4
  end_location:
    row: 64
    column: 31
  fix:
    edits:
      - location:
          row: 64
          column: 28
        end_location:
          row: 64
          column: 28
        content: "."
  parent: ~
- kind:
    name: EndsInPeriod
    body: First line should end with a period
    suggestion: Add period
    fixable: true
  location:
    row: 69
    column: 4
  end_location:
    row: 71
    column: 52
  fix:
    edits:
      - location:
          row: 71
          column: 48
        end_location:
          row: 71
          column: 48
        content: "."
  parent: ~

