crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D401_D401.py.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
expression: diagnostics
---
- - kind:
      name: NonImperativeMood
      body: "First line of docstring should be in imperative mood: \"Returns foo.\""
      suggestion: ~
      fixable: false
    location:
      row: 10
      column: 4
    end_location:
      row: 10
      column: 22
    fix: ~
    parent: ~
  - kind:
      name: NonImperativeMood
      body: "First line of docstring should be in imperative mood: \"Constructor for a foo.\""
      suggestion: ~
      fixable: false
    location:
      row: 14
      column: 4
    end_location:
      row: 14
      column: 32
    fix: ~
    parent: ~
  - kind:
      name: NonImperativeMood
      body: "First line of docstring should be in imperative mood: \"Constructor for a boa.\""
      suggestion: ~
      fixable: false
    location:
      row: 18
      column: 4
    end_location:
      row: 22
      column: 7
    fix: ~
    parent: ~
  - kind:
      name: NonImperativeMood
      body: "First line of docstring should be in imperative mood: \"Runs something\""
      suggestion: ~
      fixable: false
    location:
      row: 26
      column: 4
    end_location:
      row: 26
      column: 24
    fix: ~
    parent: ~
  - kind:
      name: NonImperativeMood
      body: "First line of docstring should be in imperative mood: \"Runs other things, nested\""
      suggestion: ~
      fixable: false
    location:
      row: 29
      column: 8
    end_location:
      row: 29
      column: 39
    fix: ~
    parent: ~
  - kind:
      name: NonImperativeMood
      body: "First line of docstring should be in imperative mood: \"Writes a logical line that\""
      suggestion: ~
      fixable: false
    location:
      row: 35
      column: 4
    end_location:
      row: 37
      column: 7
    fix: ~
    parent: ~
  - kind:
      name: NonImperativeMood
      body: "First line of docstring should be in imperative mood: \"This method docstring should be written in imperative mood.\""
      suggestion: ~
      fixable: false
    location:
      row: 74
      column: 8
    end_location:
      row: 74
      column: 73
    fix: ~
    parent: ~

