crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D402_D.py.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
---
./resources/test/fixtures/pydocstyle/D.py:378:5: D402 First line should not be the function's signature
    |
378 | @expect('D402: First line should not be the function\'s "signature"')
379 | def foobar():
380 |     """Signature: foobar()."""
    |     ^^^^^^^^^^^^^^^^^^^^^^^^^^ D402
    |


