crates/ruff/src/rules/pydocstyle/snapshots/ruff__rules__pydocstyle__tests__D405_sections.py.snap
---
source: crates/ruff/src/rules/pydocstyle/mod.rs
expression: diagnostics
---
- kind:
    name: CapitalizeSectionName
    body: "Section name should be properly capitalized (\"returns\")"
    commit: "Capitalize \"returns\""
    fixable: true
  location:
    row: 17
    column: 4
  end_location:
    row: 23
    column: 7
  fix:
    content: Returns
    location:
      row: 19
      column: 4
    end_location:
      row: 19
      column: 11
  parent: ~
- kind:
    name: CapitalizeSectionName
    body: "Section name should be properly capitalized (\"Short summary\")"
    commit: "Capitalize \"Short summary\""
    fixable: true
  location:
    row: 207
    column: 4
  end_location:
    row: 221
    column: 7
  fix:
    content: Short Summary
    location:
      row: 209
      column: 4
    end_location:
      row: 209
      column: 17
  parent: ~

